# Law_AI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
airflow/: ingest.py  requirements-airflow.txt
airflow/dags/: ingest_domain.py
docker/: Dockerfile  Dockerfile.airflow  docker-compose.yml  init-airflow-db.sql
evaluation/: config.py  report_template.html  report_ui.py
evaluation/datasets/: golden_qa.jsonl
evaluation/generation/: evaluate.py  metrics.py
evaluation/retrieval/: evaluate.py  metrics.py
evaluation/runners/: run_eval.py  run_langfuse_experiment.py
migrations/: env.py
migrations/versions/: 48a696bc414d_users_conversations_messages.py
src/law_ai/: acts.py  config.py  dependencies.py  exceptions.py  gradio_app.py  logging.py  main.py  middleware.py  security.py
src/law_ai/database/: __init__.py  factory.py
src/law_ai/database/interface/: base.py  postgres.py
src/law_ai/models/: __init__.py  base.py  conversation.py  message.py  user.py
src/law_ai/repositories/: base.py  conversation_repository.py  user_repository.py
src/law_ai/routers/: ask.py  auth.py  chats.py  health.py
src/law_ai/schemas/: auth.py  chat.py  chunk.py
src/law_ai/services/agents/: agentic_rag.py  context.py  factory.py  prompts.py  schemas.py  state.py  tools.py
src/law_ai/services/agents/nodes/: guardian.py  query_rewriter.py  sub_agent.py  supervisor.py  writer.py
src/law_ai/services/cache/: base.py  client.py  factory.py
src/law_ai/services/chunking/: base.py  client.py  factory.py
src/law_ai/services/embedding/: base.py  client.py  factory.py
src/law_ai/services/fetcher/: base.py  client.py  factory.py
src/law_ai/services/langfuse/: client.py  factory.py
src/law_ai/services/llm/: base.py  client.py  factory.py
src/law_ai/services/metadata/: base.py  client.py  factory.py
src/law_ai/services/opensearch/: base.py  client.py  factory.py
src/law_ai/services/pdf_parser/: base.py  client.py  factory.py
src/law_ai/services/translation/: base.py  client.py  factory.py  glossary.py
tests/integration/: test_auth_chats_flow.py
tests/unit/: test_ask_route.py  test_cache.py  test_chunking.py  test_eval_metrics.py  test_glossary.py  test_metadata.py  test_rrf_fusion.py  test_security.py
