[project]
name = "law-ai"
version = "0.1.0"
description = "Agentic RAG over the Polish Constitution — hybrid retrieval, LangGraph agents, FastAPI + Gradio"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # --- API ---
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "gradio>=5.0",
    # --- Config / validation ---
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    # --- Database (users + conversations) ---
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    # --- Auth ---
    "passlib[bcrypt]>=1.7",
    "pyjwt>=2.9",
    # --- Vector store ---
    "opensearch-py[async]>=2.6",
    # --- Agents / LLM ---
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=2.0",
    "langchain>=0.3",
    "langchain-anthropic>=0.2",
    # --- AWS (S3 / Bedrock, optional backends) ---
    "boto3>=1.34",
    # --- Ingestion ---
    "httpx>=0.27",
    "pymupdf>=1.24",
    # --- Observability ---
    "langfuse>=2.50",
    "structlog>=24.1",
    "langchain-deepseek>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
]
# Local embedding/reranking models (heavy: pulls torch).
# Skip if embeddings are served remotely (TEI / Bedrock / API).
ml = [
    "sentence-transformers>=3.0",
]
eval = [
    "ragas>=0.2",
    "datasets>=2.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/law_ai"]

# ---------------------------------------------------------------- tooling ----

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # bugbear
    "UP",       # pyupgrade
    "SIM",      # simplify
    "C4",       # comprehensions
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["law_ai"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["law_ai"]
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "integration: requires docker-compose services (postgres, opensearch)",
]

[tool.coverage.run]
source = ["src/law_ai"]
